Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26695

Number of an invalid row is not calculated for table value constructor

    XMLWordPrintable

Details

    Description

      Maybe it should just go to documentation as a limitation. It is unfortunate however if it keeps returning "1" rather than some non-natural number.

      CREATE OR REPLACE TABLE t (a CHAR(1)) VALUES ('a'),('b'),('foo');
      

      10.4 69bd2c88

      CREATE OR REPLACE TABLE t (a CHAR(1)) VALUES ('a'),('b'),('foo');
      Warnings:
      Warning	1406	Data too long for column 'a' at row 1
      

      Consequently, ERROR_INDEX from MDEV-10075 is not calculated for table value constructors, either.

      I"ve set affected versions to 10.3+ because that's where table value constructors were introduced, and surely the number is not calculated in 10.3 either; but the test case above is only applicable to 10.4+, 10.3 doesn't seem to allow to create table from a table value constructor.

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.25h
                  4.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.